# HPCombi

./: .clang-format  .codespellrc  .dir-locals.el  .gitignore  .mailmap  .travis.yml  AUTHORS  BUILDING.md  CF_8cpp.html  CMakeLists.txt  Makefile  RD_8cpp.html  README.md  README_8md.html  Renner_8cpp.html  TODO.txt  Trans_8cpp.html  annotated.html  arch_8hpp.html  arch_8hpp_source.html  bmat16_8hpp.html  bmat16_8hpp_source.html  bmat16__impl_8hpp.html  bmat16__impl_8hpp_source.html  bmat8_8hpp.html  bmat8_8hpp_source.html  bmat8__impl_8hpp.html  bmat8__impl_8hpp_source.html  builder_8hpp.html  builder_8hpp_source.html  clang-format  classEqEpu8-members.html  classEqEpu8.html  classHPCombi_1_1BMat16-members.html  classHPCombi_1_1BMat16.html  classHPCombi_1_1BMat8-members.html  classHPCombi_1_1BMat8.html  classcommon__eval16.html  classcommon__first__diff.html  classcommon__horiz__max.html  (+181 more)
.circleci/: config.yml
.github/workflows/: clang-format-check.yml  runtests.yml
benchmark/: CMakeLists.txt  bench-inv.cpp  bench.cpp  bench_bmat16.cpp  bench_bmat8.cpp  bench_epu8.cpp  bench_fixture.hpp  bench_gpu.cpp  bench_gpu.cu  bench_gpu_fixture.hpp  bench_main.hpp  bench_perm16.cpp  cpu_x86.h  cycle.cpp  inverse.cpp  length.cpp  profile_gpu.cu  sort.cpp  sum.cpp  testtools.hpp
benchmark/python/: compare.py  compare_hpcombi.py
benchmark/python/gbench/: report.py  util.py
ci/: travis-benchmark-install.sh  travis-boost-test-install.sh  travis-libsemigroups.sh  travis-standard.sh
doc/: CMakeLists.txt  Doxyfile.in
docs/: CF_8cpp.html  RD_8cpp.html  README_8md.html  Renner_8cpp.html  Trans_8cpp.html  annotated.html  arch_8hpp.html  arch_8hpp_source.html  bmat8_8hpp.html  bmat8_8hpp_source.html  bmat8__impl_8hpp.html  bmat8__impl_8hpp_source.html  builder_8hpp.html  builder_8hpp_source.html  classEqEpu8-members.html  classEqEpu8.html  classHPCombi_1_1BMat8-members.html  classHPCombi_1_1BMat8.html  classcommon__eval16.html  classcommon__first__diff.html  classcommon__horiz__max.html  classcommon__horiz__min.html  classcommon__horiz__sum.html  classcommon__inverse.html  classcommon__inverse__pperm.html  classcommon__is__permutation.html  classcommon__last__diff.html  classcommon__left__weak__leq.html  classcommon__lehmer.html  classcommon__length.html  classcommon__merge.html  classcommon__nb__cycles.html  classcommon__nb__descent.html  classcommon__partial__max.html  classcommon__partial__min.html  classcommon__partial__sums.html  classcommon__permutation__of.html  classes.html  classlibsemigroups_1_1Timer-members.html  classlibsemigroups_1_1Timer.html  (+139 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  (+50 more)
etc/: bench_plot.py  check-list-intrin.sh
examples/: CF.cpp  CMakeLists.txt  RD.cpp  Renner.cpp  Trans.cpp  image.cpp  pattern.cpp  stringmonoid.cpp  timer.h
experiments/: sort.cpp
experiments/Perm32/: demovect32_avx2.cpp  perm32.cpp  permbig.cpp  permdesc_red.cpp
include/: arch.hpp  bmat8.hpp  bmat8_impl.hpp  compilerinfo.hpp  config.hpp.in  cpu_x86_impl.hpp  epu.hpp  epu_impl.hpp  fonctions_gpu.cuh  fonctions_gpu_impl.cuh  hpcombi.hpp  kernels.cuh  perm16.hpp  perm16_impl.hpp  perm_generic.hpp  perm_generic_impl.hpp  power.hpp  testtools.hpp  vect16.hpp  vect_generic.hpp
include/fallback/: seq.hpp
include/hpcombi/: arch.hpp  bmat16.hpp  bmat16_impl.hpp  bmat8.hpp  bmat8_impl.hpp  builder.hpp  debug.hpp  epu.hpp  epu8.hpp  epu8_impl.hpp  epu_impl.hpp  hpcombi.hpp  perm16.hpp  perm16_impl.hpp  perm_generic.hpp  perm_generic_impl.hpp  power.hpp  vect16.hpp  vect_generic.hpp  xpu8.hpp  xpu8_impl.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  (+50 more)
src/: CMakeLists.txt  Makefile  Makefile.in  cycle.cpp  essai.cpp  inverse  inverse.cpp  perm16.cpp  perm16.hpp  perm16.impl  perm16_impl.hpp  perm_generic.hpp  power.hpp  sort.cpp  testtools.cpp  testtools.hpp
src/Perm32/: Makefile  README.md  demovect.cpp  demovect32_avx2.cpp  perm32.cpp  perm64.cpp  permbig.cpp  permdesc_red.cpp
src/Renner/: Makefile  RD.cpp  Renner.cpp  Trans.cpp
src/gpu/: CMakeLists.txt  fonctions_gpu.cu  kernels.cu
tests/: CMakeLists.txt  test_bmat16.cpp  test_bmat8.cpp  test_epu.cpp  test_epu8.cpp  test_main.cpp  test_main.hpp  test_mincl.cpp  test_mincl0.cpp  test_mincl1.cpp  test_mincl_common.cpp  test_perm16.cpp  test_perm_all.cpp  test_perm_gpu.cpp  test_pu.cpp  test_xpu8.cpp
